<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ninja.esgi.tvdbandroidapp.activity.UserInfoActivity">
    <Spinner
        android:id="@+id/login_spinner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"
        android:spinnerMode="dialog"
        android:visibility="gone"></Spinner>
    <LinearLayout
        android:columnCount="1"
        android:orientation="vertical"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:background="?colorPrimary"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:weightSum="1"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_info_title"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@color/colorAccent"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/user_info_username_prefix"
                    android:weightSum="1"
                    android:textColor="@android:color/black"
                    style="@style/Base.Theme.AppCompat.Light"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/user_info_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="2dp"
                    android:text="@string/loading"
                    android:weightSum="1" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/user_info_username_language_prefix"
                    android:weightSum="1"
                    android:textColor="@android:color/black"
                    style="@style/Base.Theme.AppCompat.Light"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/loading"
                    android:id="@+id/user_info_language"
                    android:weightSum="1"
                    android:layout_height="wrap_content"
                    android:paddingLeft="2dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/user_info_username_favorite_display_prefix"
                    android:weightSum="1"
                    android:textColor="@android:color/black"
                    style="@style/Base.Theme.AppCompat.Light"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/loading"
                    android:id="@+id/user_info_favorite_display_banners"
                    android:weightSum="1"
                    android:layout_height="wrap_content"
                    android:paddingLeft="2dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_marginTop="15dp"
        android:weightSum="1"
        android:layout_weight="1"
        android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_favorites_title"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@color/colorAccent"/>
            <ListView
                android:visibility="gone"
                android:id="@+id/user_favorites_list"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></ListView>
            <TextView
                android:layout_width="match_parent"
                android:visibility="visible"
                android:layout_marginTop="5dp"
                android:id="@+id/user_favorites_msg_info"
                android:text="@string/loading"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_marginTop="15dp"
            android:weightSum="1"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_ratings_title"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@color/colorAccent"/>
            <ListView
                android:visibility="gone"
                android:id="@+id/user_ratings_list"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></ListView>
            <TextView
                android:layout_width="match_parent"
                android:visibility="visible"
                android:layout_marginTop="5dp"
                android:id="@+id/user_ratings_msg_info"
                android:text="@string/loading"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
