<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ninja.esgi.tvdbandroidapp.LoginActivity">
    <LinearLayout
        android:columnCount="1"
        android:orientation="vertical"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:background="?colorPrimary"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
        <LinearLayout
            android:columnCount="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:weightSum="1"
            android:layout_weight="5"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/login_link"
                android:weightSum="1"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_width="wrap_content"
                android:weightSum="1"
                android:id="@+id/login_input"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/password_label"
                android:weightSum="1"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_width="wrap_content"
                android:weightSum="1"
                android:inputType="textPassword"
                android:id="@+id/password_input"
                android:layout_height="wrap_content" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:text="@string/send_label"
                android:clickable="true"
                android:onClick="connectionHandler"
                />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
